# MySortVisualization

./: CMakeLists.txt  README.md  compile_commands.json
.VSCodeCounter/2026-03-14_14-08-13/: diff.txt  results.csv  results.json  results.md
HISTORY/: README.md
HISTORY/.VSCodeCounter/2026-03-14_14-08-13/: details.md  diff-details.md  diff.md  results.txt
HISTORY/include/: PageCompareSort.h  PageTreeSort.h
HISTORY/src/: MainWindow.cpp  PageTreeSort.cpp  SortAlgorithm.cpp  main.cpp
include/: MainWindow.h  PageSingleSort.h  SortAlgorithm.h  SortState.h  VisualizerWidget.h
src/: PageCompareSort.cpp  PageSingleSort.cpp  VisualizerWidget.cpp  main.cpp
